--- a/index.html
+++ b/index.html
@@ -17,9 +17,14 @@
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon-32.png" rel="shortcut icon" type="image/x-icon">
-  <link href="images/favicon-256.png" rel="apple-touch-icon">
+  <!-- <link href="images/favicon-32.png" rel="shortcut icon" type="image/x-icon">
+  <link href="images/favicon-256.png" rel="apple-touch-icon"> -->
   <!-- Global site tag (gtag.js) - Google Analytics -->
+  <META HTTP-EQUIV="Content-type" CONTENT="text/html; charset=UTF-8">
+  <script src="https://www.google.com/recaptcha/api.js"></script>
+  <script>
+   function timestamp() { var response = document.getElementById("g-recaptcha-response"); if (response == null || response.value.trim() == "") {var elems = JSON.parse(document.getElementsByName("captcha_settings")[0].value);elems["ts"] = JSON.stringify(new Date().getTime());document.getElementsByName("captcha_settings")[0].value = JSON.stringify(elems); } } setInterval(timestamp, 500); 
+  </script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-39388126-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -75,13 +80,17 @@
         <h3 class="h3-txt h3-teal-txt">Be there when it happens</h3>
         <p class="video-p-txt email-form-txt">Subscribe so we can keep you posted on the first-ever all digital summit for girls, powered by Girls Who Code.</p>
         <div class="form-wrapper w-form">
-          <form id="email-form" name="email-form" data-name="Email Form"><label for="name" class="field-label">Name:</label><input type="text" class="text-field w-input" maxlength="256" name="name" data-name="Name" placeholder="Enter your name" id="name" required=""><label for="email" class="field-label">Email Address:</label><input type="email" class="text-field w-input" maxlength="256" name="email" data-name="Email" placeholder="Enter your email address" id="email" required=""><a href="global-girls-summit-thanks.html" class="btn w-button">I&#x27;m there</a></form>
-          <div class="w-form-done">
-            <p>Thank you! Your submission has been received!</p>
-          </div>
-          <div class="w-form-fail">
-            <p>Oops! Something went wrong while submitting the form</p>
-          </div>
+          <form id="email-form" name="email-form" data-name="Email Form" action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST">
+            <input type=hidden name='captcha_settings' value='{"keyname":"Global_Girls_Summit","fallback":"true","orgId":"00DG0000000l6gA","ts":""}'>
+            <input type=hidden name="oid" value="00DG0000000l6gA">
+            <input type=hidden name="retURL" value="thank-you.html">
+            <input type=hidden name="lead_source" value="Global Girls Summit">
+            <label for="first_name" class="text-field w-input">First Name:</label><input  id="first_name" maxlength="40" name="first_name" size="20" type="text" class="text-field w-input" placeholder="Enter your first name"/>
+            <label for="last_name" class="text-field w-input">Last Name:</label><input  id="last_name" maxlength="80" name="last_name" size="20" type="text" class="text-field w-input" placeholder="Enter your last name"/>
+            <label for="email" class="text-field w-input">Email Address:</label><input  id="email" maxlength="80" name="email" size="20" type="text" class="text-field w-input" placeholder="Enter your email address"/>
+            <div class="g-recaptcha" data-sitekey="6Leqb0YUAAAAANw6gs3HXMRj4GLmMHg--8JTTZGE"></div>
+            <input type="submit" name="submit" class="btn w-button" value="I&#x27;m there">
+          </form>
         </div>
       </div>
     </div>
