Comment out recaptcha for now

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <label for="first_name" class="text-field w-input">First Name:</label><input  id="first_name" maxlength="40" name="first_name" size="20" type="text" class="text-field w-input" placeholder="Enter your first name"/>
             <label for="last_name" class="text-field w-input">Last Name:</label><input  id="last_name" maxlength="80" name="last_name" size="20" type="text" class="text-field w-input" placeholder="Enter your last name"/>
             <label for="email" class="text-field w-input">Email Address:</label><input  id="email" maxlength="80" name="email" size="20" type="text" class="text-field w-input" placeholder="Enter your email address"/>
-            <div class="g-recaptcha" data-sitekey="6Leqb0YUAAAAANw6gs3HXMRj4GLmMHg--8JTTZGE"></div>
+            <!-- <div class="g-recaptcha" data-sitekey="6Leqb0YUAAAAANw6gs3HXMRj4GLmMHg--8JTTZGE"></div> -->
             <input type="submit" name="submit" class="btn w-button" value="I&#x27;m there">
           </form>
         </div>
