--- a/index.html
+++ b/index.html
@@ -55,16 +55,16 @@
         <div class="w-row">
           <div class="w-clearfix w-col w-col-6 w-col-small-6 w-col-tiny-6">
             <div class="fb-link-blk w-inline-block">
-              <div class="fb-share-btn fb-marg">
-                <div class="fb-share-button" data-href="http://www.girl-summit.com" data-layout="button" data-size="large" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fwww.girl-summit.com%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a>
+              <div class="fb-marg">
+                <div class="fb-share-button" data-href="http://www.girl-summit.com" data-layout="button" data-size="large" data-mobile-iframe="true" style="transform: scale(2);"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fwww.girl-summit.com%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a>
                 </div> 
               </div>
             </div>      
           </div>
           <div class="w-col w-col-6 w-col-small-6 w-col-tiny-6">
             <div href="#" class="twitter-link-blk w-inline-block">
-              <div class="twitter-share-btn tw-marg">
-                <a href="https://twitter.com/intent/tweet?button_hashtag=share&ref_src=twsrc%5Etfw&text=Whoa.+%40GirlsWhoCode+just+released+a+teaser+video+for+the+first-ever+entirely+digital+summit+for+girls+-+I+just+signed+up.+Can%27t+wait+to+see+what+they+have+planned%21++%23GlobalGirlSummit+Check+it+out.+www.girl-summit.com" class="twitter-hashtag-button" data-show-count="false">Tweet</a>
+              <div class="tw-marg">
+                <a href="https://twitter.com/intent/tweet?button_hashtag=share&ref_src=twsrc%5Etfw&text=Whoa.+%40GirlsWhoCode+just+released+a+teaser+video+for+the+first-ever+entirely+digital+summit+for+girls+-+I+just+signed+up.+Can%27t+wait+to+see+what+they+have+planned%21++%23GlobalGirlSummit+Check+it+out.+www.girl-summit.com" class="twitter-share-button" data-show-count="false" data-size="large" style="transform: scale(2);">Tweet</a>
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
               </div>
             </div>
