Add customer css file for sizing share buttons
fix label css

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/girls-who-code.webflow.css" rel="stylesheet" type="text/css">
+  <link href="css/z_custom.css" rel="stylesheet" type="text/css">
   <script src="https://use.typekit.net/pzq4dhe.js" type="text/javascript"></script>
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
@@ -56,15 +57,15 @@
           <div class="w-clearfix w-col w-col-6 w-col-small-6 w-col-tiny-6">
             <div class="fb-link-blk w-inline-block">
               <div class="fb-marg">
-                <div class="fb-share-button" data-href="http://www.girl-summit.com" data-layout="button" data-size="large" data-mobile-iframe="true" style="transform: scale(2);"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fwww.girl-summit.com%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a>
+                <div class="fb-share-button" data-href="http://www.girl-summit.com" data-layout="button" data-size="large" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fwww.girl-summit.com%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a>
                 </div> 
               </div>
             </div>      
           </div>
           <div class="w-col w-col-6 w-col-small-6 w-col-tiny-6">
-            <div href="#" class="twitter-link-blk w-inline-block">
+            <div class="twitter-link-blk w-inline-block">
               <div class="tw-marg">
-                <a href="https://twitter.com/intent/tweet?button_hashtag=share&ref_src=twsrc%5Etfw&text=Whoa.+%40GirlsWhoCode+just+released+a+teaser+video+for+the+first-ever+entirely+digital+summit+for+girls+-+I+just+signed+up.+Can%27t+wait+to+see+what+they+have+planned%21++%23GlobalGirlSummit+Check+it+out.+www.girl-summit.com" class="twitter-share-button" data-show-count="false" data-size="large" style="transform: scale(2);">Tweet</a>
+                <a href="https://twitter.com/intent/tweet?button_hashtag=share&ref_src=twsrc%5Etfw&text=Whoa.+%40GirlsWhoCode+just+released+a+teaser+video+for+the+first-ever+entirely+digital+summit+for+girls+-+I+just+signed+up.+Can%27t+wait+to+see+what+they+have+planned%21++%23GlobalGirlSummit+Check+it+out.+www.girl-summit.com" class="twitter-share-button" data-show-count="false" data-size="large">Tweet</a>
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
               </div>
             </div>
@@ -93,9 +94,9 @@
             <input type=hidden name="oid" value="00DG0000000l6gA">
             <input type=hidden name="retURL" value="thank-you.html">
             <input type=hidden name="lead_source" value="Global Girls Summit">
-            <label for="first_name" class="text-field w-input">First Name:</label><input  id="first_name" maxlength="40" name="first_name" size="20" type="text" class="text-field w-input" placeholder="Enter your first name"/>
-            <label for="last_name" class="text-field w-input">Last Name:</label><input  id="last_name" maxlength="80" name="last_name" size="20" type="text" class="text-field w-input" placeholder="Enter your last name"/>
-            <label for="email" class="text-field w-input">Email Address:</label><input  id="email" maxlength="80" name="email" size="20" type="text" class="text-field w-input" placeholder="Enter your email address"/>
+            <label for="first_name" class="field-label">First Name:</label><input  id="first_name" maxlength="40" name="first_name" size="20" type="text" class="text-field w-input" placeholder="Enter your first name"/>
+            <label for="last_name" class="field-label">Last Name:</label><input  id="last_name" maxlength="80" name="last_name" size="20" type="text" class="text-field w-input" placeholder="Enter your last name"/>
+            <label for="email" class="field-label">Email Address:</label><input  id="email" maxlength="80" name="email" size="20" type="text" class="text-field w-input" placeholder="Enter your email address"/>
             <!-- <div class="g-recaptcha" data-sitekey="6Leqb0YUAAAAANw6gs3HXMRj4GLmMHg--8JTTZGE"></div> -->
             <input type="submit" name="submit" class="btn w-button" value="I&#x27;m there">
           </form>
