--- a/index.html
+++ b/index.html
@@ -21,10 +21,6 @@
   <link href="images/favicon-256.png" rel="apple-touch-icon"> -->
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <META HTTP-EQUIV="Content-type" CONTENT="text/html; charset=UTF-8">
-  <script src="https://www.google.com/recaptcha/api.js"></script>
-  <script>
-   function timestamp() { var response = document.getElementById("g-recaptcha-response"); if (response == null || response.value.trim() == "") {var elems = JSON.parse(document.getElementsByName("captcha_settings")[0].value);elems["ts"] = JSON.stringify(new Date().getTime());document.getElementsByName("captcha_settings")[0].value = JSON.stringify(elems); } } setInterval(timestamp, 500); 
-  </script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-39388126-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -93,10 +89,9 @@
             <input type=hidden name="oid" value="00DG0000000l6gA">
             <input type=hidden name="retURL" value="https://globalgirlssummit.github.io/thank-you.html">
             <input type=hidden name="lead_source" value="Global Girls Summit">
-            <label for="first_name" class="field-label">First Name:</label><input  id="first_name" maxlength="40" name="first_name" size="20" type="text" class="text-field w-input" placeholder="Enter your first name"/>
-            <label for="last_name" class="field-label">Last Name:</label><input  id="last_name" maxlength="80" name="last_name" size="20" type="text" class="text-field w-input" placeholder="Enter your last name"/>
-            <label for="email" class="field-label">Email Address:</label><input  id="email" maxlength="80" name="email" size="20" type="text" class="text-field w-input" placeholder="Enter your email address"/>
-            <div class="g-recaptcha" data-sitekey="6Leqb0YUAAAAANw6gs3HXMRj4GLmMHg--8JTTZGE"></div>
+            <label for="first_name" class="field-label">First Name:</label><input  id="first_name" maxlength="40" name="first_name" size="20" type="text" class="text-field w-input" placeholder="Enter your first name" required="true"/>
+            <label for="last_name" class="field-label">Last Name:</label><input  id="last_name" maxlength="80" name="last_name" size="20" type="text" class="text-field w-input" placeholder="Enter your last name" required="true"/>
+            <label for="email" class="field-label">Email Address:</label><input  id="email" maxlength="80" name="email" size="20" type="text" class="text-field w-input" placeholder="Enter your email address" required="true"/>
             <input type="submit" name="submit" class="btn w-button" value="I&#x27;m there">
           </form>
         </div>
