Fix twitter share url

--- a/thank-you.html
+++ b/thank-you.html
@@ -23,10 +23,6 @@
   <link href="images/favicon-256.png" rel="apple-touch-icon"> -->
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <META HTTP-EQUIV="Content-type" CONTENT="text/html; charset=UTF-8">
-  <script src="https://www.google.com/recaptcha/api.js"></script>
-  <script>
-   function timestamp() { var response = document.getElementById("g-recaptcha-response"); if (response == null || response.value.trim() == "") {var elems = JSON.parse(document.getElementsByName("captcha_settings")[0].value);elems["ts"] = JSON.stringify(new Date().getTime());document.getElementsByName("captcha_settings")[0].value = JSON.stringify(elems); } } setInterval(timestamp, 500); 
-  </script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-39388126-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -68,7 +64,7 @@
           <div class="w-col w-col-6 w-col-small-6 w-col-tiny-6">
             <div class="twitter-link-blk w-inline-block">
               <div class="tw-marg">
-                <a href="https://twitter.com/intent/tweet?button_hashtag=share&ref_src=twsrc%5Etfw&text=Whoa.+%40GirlsWhoCode+just+released+a+teaser+video+for+the+first-ever+entirely+digital+summit+for+girls+-+I+just+signed+up.+Can%27t+wait+to+see+what+they+have+planned%21++%23GlobalGirlSummit+Check+it+out.+www.girl-summit.com" class="twitter-share-button" data-show-count="false" data-size="large">Tweet</a>
+                <a href="https://twitter.com/intent/tweet?button_hashtag=share&ref_src=twsrc%5Etfw&text=Whoa.+%40GirlsWhoCode+just+released+a+teaser+video+for+the+first-ever+entirely+digital+summit+for+girls+-+I+just+signed+up.+Can%27t+wait+to+see+what+they+have+planned%21++%23GlobalGirlSummit+Check+it+out.&url=http://www.girl-summit.com" class="twitter-share-button" data-show-count="false" data-size="large">Tweet</a>
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
               </div>
             </div>
