--- a/thank-you.html
+++ b/thank-you.html
@@ -15,6 +15,7 @@
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/girls-who-code.webflow.css" rel="stylesheet" type="text/css">
   <link href="css/z_custom.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro">
   <script src="https://use.typekit.net/pzq4dhe.js" type="text/javascript"></script>
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
