Add non profit text to footer

--- a/index.html
+++ b/index.html
@@ -104,7 +104,11 @@
     <div class="w-container">
       <div class="w-row">
         <div class="w-col w-col-2 w-col-small-4 w-col-tiny-4"><a href="http://girlswhocode.com/" class="w-inline-block"><img src="images/GWC_logo_white.png" class="footer-logo"></a></div>
-        <div class="w-col w-col-8 w-col-small-4 w-col-tiny-4"></div>
+        <div class="w-col w-col-8 w-col-small-4 w-col-tiny-4">
+          <div class="non-profit-div">
+            <p class="non-profit-text">Girls Who Code is a Registered 501(C)(3)</p>
+          </div>
+        </div>
         <div class="w-col w-col-2 w-col-small-4 w-col-tiny-4">
           <div class="w-row">
             <div class="w-clearfix w-col w-col-4 w-col-small-4 w-col-tiny-4"><a href="https://www.facebook.com/GirlsWhoCode" target="_blank" class="social-link-blk w-inline-block"><img src="images/Facebook-white.png" class="footer-social-icon"></a></div>
