--- a/index.html
+++ b/index.html
@@ -104,11 +104,7 @@
     <div class="w-container">
       <div class="w-row">
         <div class="w-col w-col-2 w-col-small-4 w-col-tiny-4"><a href="http://girlswhocode.com/" class="w-inline-block"><img src="images/GWC_logo_white.png" class="footer-logo"></a></div>
-        <div class="w-col w-col-8 w-col-small-4 w-col-tiny-4">
-          <div class="non-profit-div">
-            <p class="non-profit-text">Girls Who Code is a Registered 501(C)(3)</p>
-          </div>
-        </div>
+        <div class="w-col w-col-8 w-col-small-4 w-col-tiny-4"></div>
         <div class="w-col w-col-2 w-col-small-4 w-col-tiny-4">
           <div class="w-row">
             <div class="w-clearfix w-col w-col-4 w-col-small-4 w-col-tiny-4"><a href="https://www.facebook.com/GirlsWhoCode" target="_blank" class="social-link-blk w-inline-block"><img src="images/Facebook-white.png" class="footer-social-icon"></a></div>
@@ -119,6 +115,9 @@
       </div>
     </div>
   </footer>
+  <div class="non-profit-div">
+    <p class="non-profit-text">Girls Who Code is a national non-profit organization (and a registered 501(C)(3)) that's dedicated to closing the gender gap in technology.</p>
+  </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
